--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-MrWt9vYaHT0jnr+eGee1fm+1UWnXZOWRfaDkA+ttO90='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-MrWt9vYaHT0jnr+eGee1fm+1UWnXZOWRfaDkA+ttO90='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-U/wu+w6K1XpBAHPqH3wvYipqd15MNOwX5ak1t9L59lc='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-U/wu+w6K1XpBAHPqH3wvYipqd15MNOwX5ak1t9L59lc='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
 		<link href="/_app/immutable/assets/Dialog.KD_OhwIF.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/PendingAnimation.CaLz-x25.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/0.JpWNMAb9.css" rel="stylesheet">
@@ -23,31 +23,31 @@
 		<link href="/_app/immutable/assets/LibrarySummary.CEnz69zN.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/Code.kJj6jDti.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3._KjfsA86.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.B3sOChUG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BJpmDhtG.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CYIcaFiI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DZL3SJMS.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/D5BSqs4d.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.7uIWpchs.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BznXMvVT.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/PxhUAkWK.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/MijDv8nq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/buJ6QkN-.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B9SVMdLt.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.D11NWX0i.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.C1laKUEP.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Web2olpb.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/RVnGBtZN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D3S582zG.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Cpc5zlgo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/PP2D0f8_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/B7idTbrT.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Dh_5rrLr.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bdxmpa--.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/6XKgES_J.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/POUxFYgJ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C7lgd2ss.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B_N25-93.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.BIjbBesZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DMSsdkPU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Dn4NgTOI.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C9OWNJqC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/VOpGQOqm.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.DhZjlSpj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D9q-ML53.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BvMcjxN9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BbNOAM0O.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DMd3-hFL.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BwzxEwuM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BsjNK6iA.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/-Hb1G4YF.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BU3VHXX5.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DlLQ4qFd.js"><!--12qhfyh--><!----><!--17coqft--><!--[!--><!--]--><!----><title>@fuzdev/fuz_mastodon</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -119,15 +119,15 @@
 			
 			<script>
 				{
-					__sveltekit_1gjuz09 = {
+					__sveltekit_1n25eok = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.B3sOChUG.js"),
-						import("/_app/immutable/entry/app.7uIWpchs.js")
+						import("/_app/immutable/entry/start.CYIcaFiI.js"),
+						import("/_app/immutable/entry/app.BznXMvVT.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
