--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-U/wu+w6K1XpBAHPqH3wvYipqd15MNOwX5ak1t9L59lc='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-U/wu+w6K1XpBAHPqH3wvYipqd15MNOwX5ak1t9L59lc='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-gR1iVpmx5imkgsuooe/Ty4xm/s2RcpJVI4CihHmGl0E='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-gR1iVpmx5imkgsuooe/Ty4xm/s2RcpJVI4CihHmGl0E='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
 		<link href="/_app/immutable/assets/Dialog.KD_OhwIF.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/PendingAnimation.CaLz-x25.css" rel="stylesheet">
-		<link href="/_app/immutable/assets/0.JpWNMAb9.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.BojSh3CH.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/DocsFooter.c0bZ_GKC.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/LibrarySummary.CEnz69zN.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/Code.kJj6jDti.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3._KjfsA86.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CYIcaFiI.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DZL3SJMS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D5BSqs4d.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BznXMvVT.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DBMmVHMy.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/c-cpes85.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DVm1S4SW.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.iVmATCmv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/PxhUAkWK.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/MijDv8nq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/buJ6QkN-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B9SVMdLt.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.C1laKUEP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Web2olpb.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Cpc5zlgo.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/PP2D0f8_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B7idTbrT.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/6XKgES_J.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/POUxFYgJ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/-S1StAWN.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D79qk8Qf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B_e1Ak2L.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BX03remG.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BpkurkTA.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DrzidTj-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BPagG1aA.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bqdav3tb.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BqCgpgWf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/auGrrwo7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D6Iss_8Z.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C7lgd2ss.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/VOpGQOqm.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.DhZjlSpj.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D9q-ML53.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BvMcjxN9.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BbNOAM0O.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DMd3-hFL.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/-Hb1G4YF.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BU3VHXX5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DlLQ4qFd.js"><!--12qhfyh--><!----><!--17coqft--><!--[!--><!--]--><!----><title>@fuzdev/fuz_mastodon</title>
+		<link rel="modulepreload" href="/_app/immutable/chunks/D6X5s_oz.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.CByHqiyu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BgthZlbn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BnLmTOOS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BwVmGlC_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CMfg5fPR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/YzZ1MUHe.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D6NABm6o.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/8HtPOQ7I.js"><!--12qhfyh--><!----><!--17coqft--><!--[!--><!--]--><!----><title>@fuzdev/fuz_mastodon</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!--[!--><!----><main class="p_lg svelte-1uha8ag"><section class="box svelte-1uha8ag"><div class="panel p_lg mb_xl5 shadow_md bg"><div class="library_summary svelte-qgtqzb"><header class="box svelte-qgtqzb"><!--[!--><div class="repo_name svelte-qgtqzb">fuz_mastodon</div><!--]-->  <!--[--><!--[!--><!--[--><svg role="img" aria-label="a friendly purple spider facing you" style="width: var(--font_size, var(--icon_size_xl2)); height: var(--font_size, var(--icon_size_xl2));"><image href="https://mastodon.fuz.dev/logo.svg" class="width_100 height_100"></image></svg><!--]--><!--]--><!--]--></header> <!--[!--><!--]--> <!--[--><!--[!--><p class="text_align_center">Mastodon components and helpers for Svelte, SvelteKit, and Fuz <!--[-->🦣<!--]--></p><!--]--><!--]--> <!----> <!--[--><!--[!--><div class="homepage_url svelte-qgtqzb"><a class="chip svelte-qgtqzb" href="https://mastodon.fuz.dev/">mastodon.fuz.dev</a></div><!--]--><!--]--> <div class="links svelte-qgtqzb"><!--[--><a class="chip svelte-qgtqzb" href="https://github.com/fuzdev/fuz_mastodon">repo</a><!--]--> <!--[--><a class="chip svelte-qgtqzb" title="version" href="https://github.com/fuzdev/fuz_mastodon/blob/main/CHANGELOG.md">0.37.0</a><!--]--> <!--[--><a class="chip svelte-qgtqzb" href="https://www.npmjs.com/package/@fuzdev/fuz_mastodon">npm</a><!--]--></div> <!--[--><!--[!--><blockquote class="npm_url svelte-qgtqzb">npm i -D @fuzdev/fuz_mastodon</blockquote><!--]--><!--]--></div><!----></div> <!----><a class="card svelte-1gkpzoa link left" href="/docs"><!--[--><div class="icon svelte-1gkpzoa"><!--[!--><!---->🦣<!----><!--]--></div><!--]--> <div class="content svelte-1gkpzoa"><!---->docs<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <section class="width_upto_md svelte-1uha8ag"><div class="mb_lg width_100"><div class="width_100 mb_lg"><code data-lang="ts" class="svelte-jqsy8a"><!--[!--><!--[!--><!----><span class="token_special_keyword">import</span> <span class="token_capitalized_identifier token_class_name">Toot</span> <span class="token_special_keyword">from</span> <span class="token_string">'@fuzdev/fuz_mastodon/Toot.svelte'</span><span class="token_punctuation">;</span><!----><!--]--><!--]--></code><!----></div> <div class="width_100"><code data-lang="svelte" class="svelte-jqsy8a"><!--[!--><!--[!--><!----><span class="token_tag"><span class="token_tag"><span class="token_punctuation token_tag_punctuation">&lt;</span>Toot</span>
@@ -119,15 +119,15 @@
 			
 			<script>
 				{
-					__sveltekit_1n25eok = {
+					__sveltekit_gw3ot8 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CYIcaFiI.js"),
-						import("/_app/immutable/entry/app.BznXMvVT.js")
+						import("/_app/immutable/entry/start.DBMmVHMy.js"),
+						import("/_app/immutable/entry/app.iVmATCmv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
