--- a/index.html
+++ b/index.html
@@ -15,43 +15,42 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-gR1iVpmx5imkgsuooe/Ty4xm/s2RcpJVI4CihHmGl0E='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-gR1iVpmx5imkgsuooe/Ty4xm/s2RcpJVI4CihHmGl0E='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-04Q6WKaFHUohRToY2L8Y+PP7bi2KWi9rmzPAcQBUOMM='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-04Q6WKaFHUohRToY2L8Y+PP7bi2KWi9rmzPAcQBUOMM='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
 		<link href="/_app/immutable/assets/Dialog.KD_OhwIF.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/PendingAnimation.CaLz-x25.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/0.BojSh3CH.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/DocsFooter.c0bZ_GKC.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/LibrarySummary.CEnz69zN.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/Code.kJj6jDti.css" rel="stylesheet">
-		<link href="/_app/immutable/assets/3._KjfsA86.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DBMmVHMy.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/c-cpes85.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DVm1S4SW.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.iVmATCmv.js">
+		<link href="/_app/immutable/assets/3.BeX_znlR.css" rel="stylesheet">
+		<link rel="modulepreload" href="/_app/immutable/entry/start._oFNoLVu.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C-twU8Qj.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BGPCqmkc.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CtAn-fAL.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/-S1StAWN.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D79qk8Qf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B_e1Ak2L.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BX03remG.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.BpkurkTA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DrzidTj-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BPagG1aA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bqdav3tb.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BqCgpgWf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/auGrrwo7.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D6Iss_8Z.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Bp51aEpi.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BARjLl3E.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BkYwm30b.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.CDaVnZFw.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CUZNPyEg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BnXyjC-i.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D2bYwEYS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/MArUKryd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/D2inmD2u.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CEeZSR1E.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C7lgd2ss.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D6X5s_oz.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.CByHqiyu.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BgthZlbn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BnLmTOOS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BwVmGlC_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CMfg5fPR.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/YzZ1MUHe.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D6NABm6o.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/8HtPOQ7I.js"><!--12qhfyh--><!----><!--17coqft--><!--[!--><!--]--><!----><title>@fuzdev/fuz_mastodon</title>
+		<link rel="modulepreload" href="/_app/immutable/chunks/DV6U_M6y.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.D9d91FAC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BWbPAoeP.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/RORHNAzZ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C3GUSVz6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/C6IWCN5H.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DZVROCC_.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BDDRKnA3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BkuKGToi.js"><!--12qhfyh--><!----><!--17coqft--><!--[!--><!--]--><!----><title>@fuzdev/fuz_mastodon</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!--[!--><!----><main class="p_lg svelte-1uha8ag"><section class="box svelte-1uha8ag"><div class="panel p_lg mb_xl5 shadow_md bg"><div class="library_summary svelte-qgtqzb"><header class="box svelte-qgtqzb"><!--[!--><div class="repo_name svelte-qgtqzb">fuz_mastodon</div><!--]-->  <!--[--><!--[!--><!--[--><svg role="img" aria-label="a friendly purple spider facing you" style="width: var(--font_size, var(--icon_size_xl2)); height: var(--font_size, var(--icon_size_xl2));"><image href="https://mastodon.fuz.dev/logo.svg" class="width_100 height_100"></image></svg><!--]--><!--]--><!--]--></header> <!--[!--><!--]--> <!--[--><!--[!--><p class="text_align_center">Mastodon components and helpers for Svelte, SvelteKit, and Fuz <!--[-->🦣<!--]--></p><!--]--><!--]--> <!----> <!--[--><!--[!--><div class="homepage_url svelte-qgtqzb"><a class="chip svelte-qgtqzb" href="https://mastodon.fuz.dev/">mastodon.fuz.dev</a></div><!--]--><!--]--> <div class="links svelte-qgtqzb"><!--[--><a class="chip svelte-qgtqzb" href="https://github.com/fuzdev/fuz_mastodon">repo</a><!--]--> <!--[--><a class="chip svelte-qgtqzb" title="version" href="https://github.com/fuzdev/fuz_mastodon/blob/main/CHANGELOG.md">0.37.0</a><!--]--> <!--[--><a class="chip svelte-qgtqzb" href="https://www.npmjs.com/package/@fuzdev/fuz_mastodon">npm</a><!--]--></div> <!--[--><!--[!--><blockquote class="npm_url svelte-qgtqzb">npm i -D @fuzdev/fuz_mastodon</blockquote><!--]--><!--]--></div><!----></div> <!----><a class="card svelte-1gkpzoa link left" href="/docs"><!--[--><div class="icon svelte-1gkpzoa"><!--[!--><!---->🦣<!----><!--]--></div><!--]--> <div class="content svelte-1gkpzoa"><!---->docs<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <section class="width_upto_md svelte-1uha8ag"><div class="mb_lg width_100"><div class="width_100 mb_lg"><code data-lang="ts" class="svelte-jqsy8a"><!--[!--><!--[!--><!----><span class="token_special_keyword">import</span> <span class="token_capitalized_identifier token_class_name">Toot</span> <span class="token_special_keyword">from</span> <span class="token_string">'@fuzdev/fuz_mastodon/Toot.svelte'</span><span class="token_punctuation">;</span><!----><!--]--><!--]--></code><!----></div> <div class="width_100"><code data-lang="svelte" class="svelte-jqsy8a"><!--[!--><!--[!--><!----><span class="token_tag"><span class="token_tag"><span class="token_punctuation token_tag_punctuation">&lt;</span>Toot</span>
+		<div style="display: contents"><!--[--><!--[--><!----><!--[!--><!--[!--><!----><main class="p_lg svelte-1uha8ag"><section class="box svelte-1uha8ag"><div class="panel p_lg mb_xl5 shadow_md bg"><div class="library_summary svelte-qgtqzb"><header class="box svelte-qgtqzb"><!--[!--><div class="repo_name svelte-qgtqzb">fuz_mastodon</div><!--]-->  <!--[--><!--[!--><!--[--><svg role="img" aria-label="a friendly purple spider facing you" style="width: var(--font_size, var(--icon_size_xl2)); height: var(--font_size, var(--icon_size_xl2));"><image href="https://mastodon.fuz.dev/logo.svg" class="width_100 height_100"></image></svg><!--]--><!--]--><!--]--></header> <!--[!--><!--]--> <!--[--><!--[!--><p class="text_align_center">Mastodon components and helpers for Svelte, SvelteKit, and Fuz <!--[-->🦣<!--]--></p><!--]--><!--]--> <!----> <!--[--><!--[!--><div class="homepage_url svelte-qgtqzb"><a class="chip svelte-qgtqzb" href="https://mastodon.fuz.dev/">mastodon.fuz.dev</a></div><!--]--><!--]--> <div class="links svelte-qgtqzb"><!--[--><a class="chip svelte-qgtqzb" href="https://github.com/fuzdev/fuz_mastodon">repo</a><!--]--> <!--[--><a class="chip svelte-qgtqzb" title="version" href="https://github.com/fuzdev/fuz_mastodon/blob/main/CHANGELOG.md">0.37.0</a><!--]--> <!--[--><a class="chip svelte-qgtqzb" href="https://www.npmjs.com/package/@fuzdev/fuz_mastodon">npm</a><!--]--></div> <!--[--><!--[!--><blockquote class="npm_url svelte-qgtqzb">npm i -D @fuzdev/fuz_mastodon</blockquote><!--]--><!--]--></div><!----></div> <!----><a href="/docs" class="card  svelte-1gkpzoa link left"><!--[--><div class="icon svelte-1gkpzoa"><!--[!--><!---->🦣<!----><!--]--></div><!--]--> <div class="content svelte-1gkpzoa"><!---->docs<!----></div> <!--[!--><!--]--><!----></a><!----><!----></section> <section class="width_upto_md svelte-1uha8ag"><div class="mb_lg width_100"><div class="width_100 mb_lg"><code data-lang="ts" class="svelte-jqsy8a"><!--[!--><!--[!--><!----><span class="token_special_keyword">import</span> <span class="token_capitalized_identifier token_class_name">Toot</span> <span class="token_special_keyword">from</span> <span class="token_string">'@fuzdev/fuz_mastodon/Toot.svelte'</span><span class="token_punctuation">;</span><!----><!--]--><!--]--></code><!----></div> <div class="width_100"><code data-lang="svelte" class="svelte-jqsy8a"><!--[!--><!--[!--><!----><span class="token_tag"><span class="token_tag"><span class="token_punctuation token_tag_punctuation">&lt;</span>Toot</span>
 	<span class="token_attr_name">url</span><span class="token_attr_value"><span class="token_punctuation token_attr_equals">=</span><span class="token_punctuation token_attr_quote">"</span>https://hci.social/@ryanatkn/111491794208793604<span class="token_punctuation token_attr_quote">"</span></span>
 	<span class="token_attr_name">initial_autoload</span>
 	<span class="token_attr_name">include_replies</span>
@@ -115,19 +114,19 @@
 	<span class="token_attr_name">url</span><span class="token_attr_value"><span class="token_punctuation token_attr_equals">=</span><span class="token_punctuation token_attr_quote">"</span>https://hci.social/@ryanatkn/111491794208793604<span class="token_punctuation token_attr_quote">"</span></span>
 	<span class="token_attr_name">include_replies</span>
 	<span class="token_attr_name">reply_filter=</span><span class="token_svelte_expression"><span class="token_punctuation">{</span><span class="token_lang_ts"><span class="token_punctuation">(</span><span class="token_punctuation">)</span> <span class="token_operator">=></span> <span class="token_keyword">null</span></span><span class="token_punctuation">}</span></span>
-<span class="token_punctuation token_tag_punctuation">/></span></span><!----><!--]--><!--]--></code><!----></div></div></div></section> <div class="my_xl5"><footer class="box"><!----> <div class="logo box panel p_lg shadow_inset_xs svelte-jrqc5k"><a class="mb_xs" href="/about">about</a><!----> <a href="https://github.com/fuzdev/fuz_mastodon" rel="me" title="source code on GitHub" class="svelte-jrqc5k"><!--[!--><svg viewBox="0 0 1024 1024" aria-label="the GitHub logo, an octocat silhouette" style="width: var(--icon_size_lg); height: var(--icon_size_lg); flex-shrink: 1;"><!--[!--><!--]--><!--[--><!--[--><path fill="var(--text_color, #000)" d="M8 0C3.58 0 0 3.58 0 8C0 11.54 2.29 14.53 5.47 15.59C5.87 15.66 6.02 15.42 6.02 15.21C6.02 15.02 6.01 14.39 6.01 13.72C4 14.09 3.48 13.23 3.32 12.78C3.23 12.55 2.84 11.84 2.5 11.65C2.22 11.5 1.82 11.13 2.49 11.12C3.12 11.11 3.57 11.7 3.72 11.94C4.44 13.15 5.59 12.81 6.05 12.6C6.12 12.08 6.33 11.73 6.56 11.53C4.78 11.33 2.92 10.64 2.92 7.58C2.92 6.71 3.23 5.99 3.74 5.43C3.66 5.23 3.38 4.41 3.82 3.31C3.82 3.31 4.49 3.1 6.02 4.13C6.66 3.95 7.34 3.86 8.02 3.86C8.7 3.86 9.38 3.95 10.02 4.13C11.55 3.09 12.22 3.31 12.22 3.31C12.66 4.41 12.38 5.23 12.3 5.43C12.81 5.99 13.12 6.7 13.12 7.58C13.12 10.65 11.25 11.33 9.47 11.53C9.76 11.78 10.01 12.26 10.01 13.01C10.01 14.08 10 14.94 10 15.21C10 15.42 10.15 15.67 10.55 15.59C13.71 14.53 16 11.53 16 8C16 3.58 12.42 0 8 0Z" fill-rule="evenodd" clip-rule="evenodd" transform="scale(64)"></path><!--]--><!--]--></svg><!--]--></a> <!----></div> <!--[--><div class="root_url svelte-jrqc5k"><a href="https://www.fuz.dev/">fuz.dev</a></div><!--]--></footer><!----></div></main><!----><!--]--><!----> <!--[!--><!--]--><!----><!--]--> <!--[--><div class="contextmenu_layout svelte-tmo2ds" aria-hidden="true"></div><!--]-->  <!--[!--><!--]--><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+<span class="token_punctuation token_tag_punctuation">/></span></span><!----><!--]--><!--]--></code><!----></div></div></div></section> <div class="my_xl5"><footer class="box  svelte-jrqc5k"><!----> <div class="logo box panel p_lg shadow_inset_xs svelte-jrqc5k"><a class="mb_xs" href="/about">about</a><!----> <a href="https://github.com/fuzdev/fuz_mastodon" rel="me" title="source code on GitHub" class="svelte-jrqc5k"><!--[!--><svg viewBox="0 0 1024 1024" aria-label="the GitHub logo, an octocat silhouette" style="width: var(--icon_size_lg); height: var(--icon_size_lg); flex-shrink: 1;"><!--[!--><!--]--><!--[--><!--[--><path fill="var(--text_color, #000)" d="M8 0C3.58 0 0 3.58 0 8C0 11.54 2.29 14.53 5.47 15.59C5.87 15.66 6.02 15.42 6.02 15.21C6.02 15.02 6.01 14.39 6.01 13.72C4 14.09 3.48 13.23 3.32 12.78C3.23 12.55 2.84 11.84 2.5 11.65C2.22 11.5 1.82 11.13 2.49 11.12C3.12 11.11 3.57 11.7 3.72 11.94C4.44 13.15 5.59 12.81 6.05 12.6C6.12 12.08 6.33 11.73 6.56 11.53C4.78 11.33 2.92 10.64 2.92 7.58C2.92 6.71 3.23 5.99 3.74 5.43C3.66 5.23 3.38 4.41 3.82 3.31C3.82 3.31 4.49 3.1 6.02 4.13C6.66 3.95 7.34 3.86 8.02 3.86C8.7 3.86 9.38 3.95 10.02 4.13C11.55 3.09 12.22 3.31 12.22 3.31C12.66 4.41 12.38 5.23 12.3 5.43C12.81 5.99 13.12 6.7 13.12 7.58C13.12 10.65 11.25 11.33 9.47 11.53C9.76 11.78 10.01 12.26 10.01 13.01C10.01 14.08 10 14.94 10 15.21C10 15.42 10.15 15.67 10.55 15.59C13.71 14.53 16 11.53 16 8C16 3.58 12.42 0 8 0Z" fill-rule="evenodd" clip-rule="evenodd" transform="scale(64)"></path><!--]--><!--]--></svg><!--]--></a> <!----></div> <!--[--><div class="root_url svelte-jrqc5k"><a href="https://www.fuz.dev/" class="svelte-jrqc5k">fuz.dev</a></div><!--]--></footer><!----></div></main><!----><!--]--><!----> <!--[!--><!--]--><!----><!--]--> <!--[--><div class="contextmenu_layout svelte-tmo2ds" aria-hidden="true"></div><!--]-->  <!--[!--><!--]--><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_gw3ot8 = {
+					__sveltekit_ogco0o = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DBMmVHMy.js"),
-						import("/_app/immutable/entry/app.iVmATCmv.js")
+						import("/_app/immutable/entry/start._oFNoLVu.js"),
+						import("/_app/immutable/entry/app.CtAn-fAL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
