--- a/index.html
+++ b/index.html
@@ -15,38 +15,38 @@
 			);
 		</script>
 
-		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-04Q6WKaFHUohRToY2L8Y+PP7bi2KWi9rmzPAcQBUOMM='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-04Q6WKaFHUohRToY2L8Y+PP7bi2KWi9rmzPAcQBUOMM='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
+		<meta http-equiv="content-security-policy" content="child-src 'none'; default-src 'none'; frame-src 'self'; worker-src 'self' blob:; connect-src 'self' https://hci.social/; font-src 'self' data: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; img-src 'self' data: blob: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; manifest-src 'self'; media-src 'self' data: blob: mediastream: filesystem: https://*.ryanatkn.com/ https://*.spiderspace.org/ https://*.webdevladder.net/ https://*.dealt.dev/ https://*.fuz.dev/ https://*.ztack.net/ https://*.zzz.software/ https://*.cosmicplayground.org/ https://ryanatkn.github.io/ https://hci.social/ https://storage.googleapis.com/hci-social-storage/; object-src 'none'; script-src 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-gLymi7eWeCcF/3af5RPg7eXFqZkUNZRsozjTNQp65S4='; script-src-elem 'self' 'sha256-QOxqn7EUzb3ydF9SALJoJGWSvywW9R0AfTDSenB83Z8=' 'sha256-gLymi7eWeCcF/3af5RPg7eXFqZkUNZRsozjTNQp65S4='; script-src-attr 'none'; style-src 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; style-src-attr 'unsafe-inline'; base-uri 'none'; form-action 'self'; upgrade-insecure-requests">
 		<link href="/_app/immutable/assets/Dialog.KD_OhwIF.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/PendingAnimation.CaLz-x25.css" rel="stylesheet">
-		<link href="/_app/immutable/assets/0.BojSh3CH.css" rel="stylesheet">
+		<link href="/_app/immutable/assets/0.DskUKl6g.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/DocsFooter.c0bZ_GKC.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/LibrarySummary.CEnz69zN.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/Code.kJj6jDti.css" rel="stylesheet">
 		<link href="/_app/immutable/assets/3.BeX_znlR.css" rel="stylesheet">
-		<link rel="modulepreload" href="/_app/immutable/entry/start._oFNoLVu.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C-twU8Qj.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CDruAnY9.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Fr0MGR0-.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BGPCqmkc.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CtAn-fAL.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D1hoDmQ7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/Bp51aEpi.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BARjLl3E.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BkYwm30b.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/0.CDaVnZFw.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/0.BkQdUoFP.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/CUZNPyEg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BnXyjC-i.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D2bYwEYS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/spYdgRNt.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CISGt5wM.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/MArUKryd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/D2inmD2u.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CEeZSR1E.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/2SmNN44I.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BuszrGeD.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C7lgd2ss.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DV6U_M6y.js">
-		<link rel="modulepreload" href="/_app/immutable/nodes/3.D9d91FAC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BWbPAoeP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/RORHNAzZ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/C3GUSVz6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BCPIytdx.js">
+		<link rel="modulepreload" href="/_app/immutable/nodes/3.DCgcJEPD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BGA7G3el.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/3Ql-9loP.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DszkhMYW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/C6IWCN5H.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DZVROCC_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BDDRKnA3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Du4-ZWeX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/V54QCnR_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/BkuKGToi.js"><!--12qhfyh--><!----><!--17coqft--><!--[!--><!--]--><!----><title>@fuzdev/fuz_mastodon</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -118,15 +118,15 @@
 			
 			<script>
 				{
-					__sveltekit_ogco0o = {
+					__sveltekit_1dbnrx7 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start._oFNoLVu.js"),
-						import("/_app/immutable/entry/app.CtAn-fAL.js")
+						import("/_app/immutable/entry/start.CDruAnY9.js"),
+						import("/_app/immutable/entry/app.D1hoDmQ7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
